# warcaby

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  TODO.md  Warcaby.vcxproj  Warcaby.vcxproj.filters
cmake/modules/: FindSFML.cmake
doc/: doxygen.conf  header.html  sfml-doxygen-web.tag.xml
res/initboards/: 0.txt
src/: Board.cpp  Board.h  ComputerPlayer.cpp  ComputerPlayer.h  Cursor.cpp  Cursor.h  Draughts.cpp  Draughts.h  EasingCurve.cpp  EasingCurve.h  Error.cpp  Error.h  Field.cpp  Field.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  GameRunner.cpp  GameRunner.h  HumanPlayer.cpp  HumanPlayer.h  Macros.h  Menu.cpp  Menu.h  MenuEntry.cpp  MenuEntry.h  MenuOption.cpp  MenuOption.h  MenuRedirection.cpp  MenuRedirection.h  NotImplementedError.cpp  NotImplementedError.h  Piece.cpp  Piece.h  Player.cpp  Player.h  ProjectConfig.h.in  Resources.cpp  Resources.h  (+10 more)
